--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -30,7 +30,7 @@
             <a class="nav-link text-white fs-5" href="/a-propos">A Propos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white fs-5" href="/prise-en-charge">Prise en charge</a>
+            <a class="nav-link text-white fs-5" href="/prise-en-charge">Conditions de prise en charge</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white fs-5" href="/nous-rejoindre">Nous rejoindre</a>
