--- a/templates/main/join.html.twig
+++ b/templates/main/join.html.twig
@@ -68,6 +68,12 @@
             <span class="input-group-text" id="basic-addon2">mail</span>
             </div>
 
+            <div class="mb-3">
+            <input type="file" class="form-control" aria-label="file example" required>
+            <div class="invalid-feedback">Example invalid form file feedback</div>
+            </div>
+
+
             <div class="input-group mb-3">
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="votre message"></textarea>
             </div>
