--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -16,7 +16,7 @@
     margin-top: 150px!important;
 }
 
-#homedescription {
+#homeDescription {
     width: 50vw!important;
     height: 100vh!important;
 }
