--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -4,12 +4,12 @@
   <div class="container-fluid g-0">
     <a class="navbar-brand m-0 p-0" href="/"><img id="logo" src="{{ asset('logo2.svg') }}"></a>
     <section class="text-center" id="compteur">
-      <span><span class="count">421</span> interventions / jours </span>
-      <span><span class="count">45</span> urgences / jours </span>
-      <span><span class="count">28</span> salariés </span>
-      <span><span class="count">5</span> ambualnces </span>
-      <span><span class="count">10</span> VSL </span>
-      <span><span class="count">8</span> Taxi </span>
+      <span class="countTextColor"><span class="count">421</span> Interventions</span>
+      <span class="countTextColor"><span class="count">45</span> Urgences</span>
+      <span class="countTextColor"><span class="count">28</span> Salarié</span>
+      <span class="countTextColor"><span class="count">5</span> Ambualnces</span>
+      <span class="countTextColor"><span class="count">10</span> VSL</span>
+      <span class="countTextColor"><span class="count">8</span> Taxi</span>
     </section>
     <div class="square rounded" id="menuButton">
       <button class="navbar-toggler me-3 border-0 shadow-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark" aria-controls="offcanvasNavbarDark" aria-label="Toggle navigation">
