Small Front Update / Test

--- a/assets/styles/_header.scss
+++ b/assets/styles/_header.scss
@@ -2,12 +2,9 @@
     background-color: #0059C6!important;
 }
 
-nav {
-    background-color: white;
-}
 
-.countTextColor {
-    color: #5C84B7;
+.countText {
+    color: white;
     padding: 0 5px;
 }
 
