--- a/assets/app.scss
+++ b/assets/app.scss
@@ -3,6 +3,7 @@
 @import "assets/styles/_login.scss";
 @import "assets/styles/_home.scss";
 @import "assets/styles/_header.scss";
+@import "assets/styles/_footer.scss";
 @import "assets/styles/_show.scss";
 @import "assets/styles/_about.scss";
 @import "assets/styles/_support.scss";
